# SISC-Paper-2024

./: README.md  environment.yml
.github/workflows/: l2c.yml
src/: meson.build
src/C/: dct.c  lambda.c  leg2cheb.c  leg2cheb.h  meson.build
src/cython/: l2c.pxd  l2c.pyx  meson.build
src/multiprec/C++/: L2Cprec.cpp  meson.build
src/multiprec/python/: L2Cprecision.py  meson.build
src/python/: Leg2Cheb.py  binommat.py  meson.build  test.py
